--- a/naudir-239.html
+++ b/naudir-239.html
@@ -152,54 +152,46 @@
       </div>
     </section>
     <!-- FOOTER -->
-    <footer class="container">
-      <div class="row">
-        <div class="col-12 col-md-4 offset-1">
-          <a class="navbar-brand" href="index.html"
-            ><img width="316px" height="auto" src="img/logo-de-micheli.png"
-          /></a>
-        </div>
-        <div
-          class="col-12 col-md-7 border-start border-2 border-black d-flex flex-column justify-content-center">
-          <div class="row">
-            <div class="col-12 col-md-5 offset-md-2">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item py-3">
-                  <a class="nav-link" href="proyectos.html">Proyectos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contacto</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-12 col-md-5">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    href="https://www.instagram.com/marcianodemicheli/?hl=es"
-                    ><img src="img/ig-logo.png" class="" /> Instagram</a
-                  >
-                </li>
+   <footer class="container">
+    <div class="row">
+      <div class="col-12 col-md-4 offset-1">
+        <a class="navbar-brand" href="index.html"><img width="316px" height="auto" src="img/logo-de-micheli.png" /></a>
+      </div>
+      <div class="col-12 col-md-7 border-start border-2 border-black d-flex flex-column justify-content-center">
+        <div class="row">
+          <div class="col-12 col-md-5 offset-md-2">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item py-3">
+                <a class="nav-link" href="proyectos.html">Proyectos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-5">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item d-flex">
+                <a class="nav-link " href="https://www.instagram.com/marcianodemicheli/?hl=es"><img src="img/ig-logo.png"
+                    class=""> Instagram</a>
+              </li>
                 <li class="nav-item py-2">
-                  <a class="nav-link"
-                    ><img src="img/envelop.png" class="" />
-                    info@marcianodemicheli.com</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link"
-                    ><img src="img/phone.png" class="" /> +54 11 5027 3534</a
-                  >
-                </li>
-              </ul>
-            </div>
+                <a class="nav-link" href="https://www.linkedin.com/company/marciano-de-micheli"><img src="linkedin-icono.png" class=""> Linkedin</a>
+              </li>
+              <li class="nav-item py-2">
+                <a class="nav-link"><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"><img src="img/phone.png" class=""> +54 11 5027 3534</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
   </body>
 </html>
