--- a/arq-unifamiliar.html
+++ b/arq-unifamiliar.html
@@ -414,14 +414,18 @@
                 <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
           </div>
           <div class="col-12 col-md-5">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.instagram.com/marcianodemicheli/?hl=es"><img src="img/ig-logo.png" class=""> Instagram</a>
+              <li class="nav-item d-flex">
+                <a class="nav-link " href="https://www.instagram.com/marcianodemicheli/?hl=es"><img src="img/ig-logo.png"
+                    class=""> Instagram</a>
+              </li>
+                <li class="nav-item py-2">
+                <a class="nav-link" href="https://www.linkedin.com/company/marciano-de-micheli"><img src="linkedin-icono.png" class=""> Linkedin</a>
               </li>
               <li class="nav-item py-2">
                 <a class="nav-link"><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
@@ -433,7 +437,7 @@
           </div>
         </div>
       </div>
-    </div>      
+    </div>
   </footer>
 </body>
 
