--- a/index.html
+++ b/index.html
@@ -8,33 +8,47 @@
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script type="text/javascript">
-      (function () {
-        // https://dashboard.emailjs.com/admin/account
-        emailjs.init("guLpCoCCJ8x6mhHtU");
-      })();
-    </script>
-    <script type="text/javascript">
-      window.onload = function () {
-        document
-          .getElementById("contact-form")
-          .addEventListener("submit", function (event) {
-            event.preventDefault();
-            // generate a five digit number for the contact_number variable
-            this.contact_number.value = (Math.random() * 100000) | 0;
-            // these IDs from the previous steps
-            emailjs
-              .sendForm("contacto_michelli", "contacto_michelli", this)
-              .then(
-                function () {
-                  console.log("SUCCESS!");
-                },
-                function (error) {
-                  console.log("FAILED...", error);
-                }
-              );
-          });
-      };
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script type="text/javascript">
+  (function () {
+    emailjs.init('guLpCoCCJ8x6mhHtU');
+  })();
+</script>
+<script type="text/javascript">
+  window.onload = function () {
+    document.getElementById('contact-form').addEventListener('submit', function (event) {
+      event.preventDefault();
+      this.contact_number.value = Math.random() * 100000 | 0;
+      emailjs.sendForm('contacto_michelli', 'contacto_michelli', this)
+        .then(function () {
+          console.log('¡ÉXITO!');
+          document.getElementById('fullName').value = '';
+          document.getElementById('subjet').value = '';
+          document.getElementById('email').value = '';
+          document.getElementById('message').value = '';
+          Toastify({
+            text: "¡Mensaje enviado con éxito!",
+            className:"notification-exito",
+            duration: 3000,
+            gravity: "top",
+            position: "center",
+          }).showToast();
+        }, function (error) {
+          console.log('FALLIDO...', error);
+          // Mostrar notificación de error
+          Toastify({
+            text: "¡Error al enviar el mensaje!",
+            className:"notification-error",
+            duration: 3000,
+            gravity: "top", 
+            position: "center",
+          }).showToast();
+        });
+    });
+  }
+</script>
+
     </script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -115,19 +129,19 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/bannerHome/1.PORTADA BANNER.png" class="d-block w-100  " alt="..." />
+            <img src="img/bannerHome/Portada banner.png" class="d-block banner-img w-100  " alt="..." />
             <div class="carousel-caption d-none d-md-block text-start start-0">
               <h5>Cariló Golf</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/bannerHome/1.PORTADA BANNER HOME.png" class="d-block w-100 " alt="..." />
+            <img src="img/bannerHome/5.jpg" class="d-block banner-img w-100 " alt="..." />
             <div class="carousel-caption d-none d-md-block text-start start-0">
               <h5>CITY BELL CHICO</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/bannerHome/1.BANNER HOME.png" class="d-block w-100" alt="..." />
+            <img src="img/costa-delta/1. PORTADA.jpg" class="d-block banner-img w-100" alt="..." />
             <div class="carousel-caption d-none d-md-block text-start start-0">
               <h5>Costa Delta</h5>
             </div>
@@ -237,7 +251,7 @@
                     ">
                     <div class="title">
                       <h6>
-                        NUDIR <br />
+                        NAUDIR <br />
                         251
                       </h6>
                     </div>
@@ -252,7 +266,7 @@
                     style="background-image: url('img/naudir-201/PORTADA.jpg')">
                     <div class="title">
                       <h6>
-                        NUDIR <br />
+                        NAUDIR <br />
                         201
                       </h6>
                     </div>
@@ -266,7 +280,7 @@
                     style="background-image: url('img/naudir-239/PORTADA.jpg')">
                     <div class="title">
                       <h6>
-                        NUDIR <br />
+                        NAUDIR <br />
                         239
                       </h6>
                     </div>
@@ -308,6 +322,38 @@
                       <h6>
                         COSTA <br />
                         DELTA
+                      </h6>
+                    </div>
+                  </div>
+                </a>
+              </div>
+                            <div class="col-6 col-md-6 col-lg-3 filter-element">
+                <a href="nizuc-20.html" class="d-block">
+                  <div
+                    class="grid-item"
+                    style="
+                      background-image: url('img/nizuc-20/PORTADA (1).jpg');
+                    ">
+                    <div class="title">
+                      <h6>
+                        NIZUC <br />
+                        20 M16
+                      </h6>
+                    </div>
+                  </div>
+                </a>
+              </div>
+                                          <div class="col-6 col-md-6 col-lg-3 filter-element">
+                <a href="delta-house.html" class="d-block">
+                  <div
+                    class="grid-item"
+                    style="
+                      background-image: url('img/delta-house/PORTADA.jpg');
+                    ">
+                    <div class="title">
+                      <h6>
+                        DELTA<br />
+                        HOUSE
                       </h6>
                     </div>
                   </div>
@@ -374,55 +420,47 @@
         </div>
       </section>
     </main>
-    <!-- FOOTER -->
-    <footer class="container">
-      <div class="row">
-        <div class="col-12 col-md-4 offset-1">
-          <a class="navbar-brand" href="index.html"
-            ><img width="316px" height="auto" src="img/logo-de-micheli.png"
-          /></a>
-        </div>
-        <div
-          class="col-12 col-md-7 border-start border-2 border-black d-flex flex-column justify-content-center">
-          <div class="row">
-            <div class="col-12 col-md-5 offset-md-2">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item py-3">
-                  <a class="nav-link" href="proyectos.html">Proyectos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contacto</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-12 col-md-5">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    href="https://www.instagram.com/marcianodemicheli/?hl=es"
-                    ><img src="img/ig-logo.png" class="" /> Instagram</a
-                  >
-                </li>
+    <!--footer-->
+  <footer class="container">
+    <div class="row">
+      <div class="col-12 col-md-4 offset-1">
+        <a class="navbar-brand" href="index.html"><img width="316px" height="auto" src="img/logo-de-micheli.png" /></a>
+      </div>
+      <div class="col-12 col-md-7 border-start border-2 border-black d-flex flex-column justify-content-center">
+        <div class="row">
+          <div class="col-12 col-md-5 offset-md-2">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item py-3">
+                <a class="nav-link" href="proyectos.html">Proyectos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-5">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item d-flex">
+                <a class="nav-link " href="https://www.instagram.com/marcianodemicheli/?hl=es"><img src="img/ig-logo.png"
+                    class=""> Instagram</a>
+              </li>
                 <li class="nav-item py-2">
-                  <a class="nav-link"
-                    ><img src="img/envelop.png" class="" />
-                    info@marcianodemicheli.com</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link"
-                    ><img src="img/phone.png" class="" /> +54 11 5027 3534</a
-                  >
-                </li>
-              </ul>
-            </div>
+                <a class="nav-link" href="https://www.linkedin.com/company/marciano-de-micheli"><img src="linkedin-icono.png" class=""> Linkedin</a>
+              </li>
+              <li class="nav-item py-2">
+                <a class="nav-link"><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link"><img src="img/phone.png" class=""> +54 11 5027 3534</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
   </body>
 </html>
