--- a/naudir-1-2.html
+++ b/naudir-1-2.html
@@ -107,10 +107,7 @@
           </div>
                     <div class="col-12  d-flex  justify-content-center align-items-center">
 
-          <div class="col12 p-2">
-              <img src="img/naudir-I-II/01 el naudir 2.JPG" class="img-fluid img-description" alt="">
-            </div>
-            </div>
+
         </div>
         </div>
       </section>
@@ -137,8 +134,12 @@
           </div>
           <div class="col-12 col-md-5">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="https://www.instagram.com/marcianodemicheli/?hl=es"><img src="img/ig-logo.png" class=""> Instagram</a>
+              <li class="nav-item d-flex">
+                <a class="nav-link " href="https://www.instagram.com/marcianodemicheli/?hl=es"><img src="img/ig-logo.png"
+                    class=""> Instagram</a>
+              </li>
+                <li class="nav-item py-2">
+                <a class="nav-link" href="https://www.linkedin.com/company/marciano-de-micheli"><img src="linkedin-icono.png" class=""> Linkedin</a>
               </li>
               <li class="nav-item py-2">
                 <a class="nav-link"><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
@@ -150,7 +151,7 @@
           </div>
         </div>
       </div>
-    </div>      
+    </div>
   </footer>
 </body>
 
