correccion banner home, portada naudir1/2

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  
 
   <!--inizializador de mapa-->
     <script>
@@ -32,6 +33,7 @@
                 title: "Camino Parque Centenario 490, Alicia M. de Justo 740 3° piso Oficina 20"
             });
         }
+        
     </script>
 
   <!--email controler-->
@@ -205,6 +207,9 @@
   </footer>
 
 </body>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOufaicr5T7WwClwmclBn3KcHF9N-XerY&callback=initMap"
+
+<script 
+
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOufaicr5T7WwClwmclBn3KcHF9N-XerY&callback=initMap"
         async defer></script>
 </html>
