--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/bannerHome/5.jpg" class="d-block banner-img w-100" alt="..." />
+            <img src="img/bannerHome/PORTADA2.jpg" class="d-block banner-img w-100" alt="..." />
             <div class="carousel-caption d-none d-md-block text-start start-0">
               <h5>NAUDIR 239</h5>
             </div>
