--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
 <div class="col-12 d-flex mt-3">
   <div class="col-6 d-flex">
 <div><img src="loction-icono.png" class=""></div>
-    <p>Camino Parque Centenario 490, Alicia M. de Justo 740 3° piso Oficina 20</p>
+    <p> Camino Parque Centenario 490</p>
   </div>
     <div class="col-6 d-flex">
 <div><img src="loction-icono.png" class=""></div>
@@ -193,11 +193,13 @@
                 <li class="nav-item py-2">
                 <a class="nav-link" href="https://www.linkedin.com/company/marciano-de-micheli"><img src="linkedin-icono.png" class=""> Linkedin</a>
               </li>
-              <li class="nav-item py-2">
-                <a class="nav-link"><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
+              <li class="nav-item py-2 ">
+
+                <a href="mailto:info@marcianodemicheli.com" class="nav-link d'flex" ><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link"><img src="img/phone.png" class=""> +54 11 5027 3534</a>
+                
+                <a href="tel:+54 11 5027 3534" class="nav-link" ><img src="img/phone.png" class=""> +54 11 5027 3534</a>
               </li>
             </ul>
           </div>
@@ -205,7 +207,6 @@
       </div>
     </div>
   </footer>
-
 </body>
 
 <script 
