--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
     </script>
 
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -71,9 +73,9 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg mb-4">
-        <div class="container d-flex flex-row justify-content-between">
+        <div class="container d-flex flex-row justify-content-between ">
           <a class="navbar-brand" href="index.html"
-            ><img width="259px" height="auto" src="img/logo-de-micheli.png"
+            ><img class="imgLogo" height="auto" src="img/logo-de-micheli.png"
           /></a>
           <button
             class="navbar-toggler"
@@ -107,7 +109,7 @@
     </header>
 
     <main >
-      <div id="carouselCaptions" class="main-slider carousel slide ">
+      <div id="carouselCaptions" class="main-slider carousel slide absolute">
         <div class="carousel-indicators">
           <button
             type="button"
@@ -185,176 +187,110 @@
         <div class="row tab-details">
           <div class="col-12" id="todos-tab">
             <div class="row g-3 mb-1" id="myRow">
-              <div class="col-6 col-md-6 col-lg-3 filter-element" id="card">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="carilo-golf.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="background-image: url('img/carlio-golfo.JPG')">
+                  <div class="grid-item" style="background-image: url('img/carlio-golfo.JPG')">
                     <div class="title">
-                      <h6>
-                        CARILO <br />
-                        GOLF
-                      </h6>
+                      <h6>CARILO <br />GOLF</h6>
                     </div>
                   </div>
                 </a>
               </div>
-              <div class="col-6 col-md-6 col-lg-3 filter-element">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="carilo-bn.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="background-image: url('img/carlio-bn.jpg')">
+                  <div class="grid-item" style="background-image: url('img/carlio-bn.jpg')">
                     <div class="title">
-                      <h6>
-                        CARILO <br />
-                        BN
-                      </h6>
+                      <h6>CARILO <br />BN</h6>
                     </div>
                   </div>
                 </a>
               </div>
-
-              <div class="col-6 col-md-6 col-lg-3 filter-element">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="city-bell-chico.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="background-image: url('img/Citybell-chico.jpeg')">
+                  <div class="grid-item" style="background-image: url('img/Citybell-chico.jpeg')">
                     <div class="title">
-                      <h6>
-                        CITY BELL <br />
-                        CHICO
-                      </h6>
+                      <h6>CITY BELL <br />CHICO</h6>
                     </div>
                   </div>
                 </a>
               </div>
-              <div class="col-6 col-md-6 col-lg-3 filter-element">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="costa-esmeralda.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="background-image: url('img/costa-esmeralda-115/1. PORTADA TARJETA.png')">
+                  <div class="grid-item" style="background-image: url('img/costa-esmeralda-115/1. PORTADA TARJETA.png')">
                     <div class="title">
-                      <h6>
-                        115 COSTA <br />
-                        ESMERALDA
-                      </h6>
+                      <h6>115 COSTA <br />ESMERALDA</h6>
                     </div>
                   </div>
                 </a>
               </div>
-              <div class="col-6 col-md-6 col-lg-3 filter-element">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="naudir-251.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="
-                      background-image: url('img/naudir-251/PORTADA.jpeg');
-                    ">
+                  <div class="grid-item" style="background-image: url('img/naudir-251/PORTADA.jpeg')">
                     <div class="title">
-                      <h6>
-                        NAUDIR <br />
-                        251
-                      </h6>
+                      <h6>NAUDIR <br />251</h6>
                     </div>
                   </div>
                 </a>
               </div>
-
-              <div class="col-6 col-md-6 col-lg-3 filter-element">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="naudir-201.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="background-image: url('img/naudir-201/PORTADA.jpg')">
+                  <div class="grid-item" style="background-image: url('img/naudir-201/PORTADA.jpg')">
                     <div class="title">
-                      <h6>
-                        NAUDIR <br />
-                        201
-                      </h6>
+                      <h6>NAUDIR <br />201</h6>
                     </div>
                   </div>
                 </a>
               </div>
-              <div class="col-6 col-md-6 col-lg-3 filter-element">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="naudir-239.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="background-image: url('img/naudir-239/PORTADA.jpg')">
+                  <div class="grid-item" style="background-image: url('img/naudir-239/PORTADA.jpg')">
                     <div class="title">
-                      <h6>
-                        NAUDIR <br />
-                        239
-                      </h6>
+                      <h6>NAUDIR <br />239</h6>
                     </div>
                   </div>
                 </a>
               </div>
-              <div class="col-6 col-md-6 col-lg-3 filter-element">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="lemu.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="background-image: url('img/lemu/1. PORTADA TARJETA.png')">
+                  <div class="grid-item" style="background-image: url('img/lemu/1. PORTADA TARJETA.png')">
                     <div class="title">
                       <h6>LEMU</h6>
                     </div>
                   </div>
                 </a>
               </div>
-              <div class="col-6 col-md-6 col-lg-3 filter-element">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="barcelona.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="
-                      background-image: url('img/barcelona/1. PORTADA TARJETA.png');
-                    ">
+                  <div class="grid-item" style="background-image: url('img/barcelona/1. PORTADA TARJETA.png')">
                     <div class="title">
                       <h6>GUALBA</h6>
                     </div>
                   </div>
                 </a>
               </div>
-              <div class="col-6 col-md-6 col-lg-3 filter-element">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="costa-delta.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="
-                      background-image: url('img/costa-delta/1.\ PORTADA.jpg');
-                    ">
+                  <div class="grid-item" style="background-image: url('img/costa-delta/1.\ PORTADA.jpg')">
                     <div class="title">
-                      <h6>
-                        COSTA <br />
-                        DELTA
-                      </h6>
+                      <h6>COSTA <br />DELTA</h6>
                     </div>
                   </div>
                 </a>
               </div>
-                            <div class="col-6 col-md-6 col-lg-3 filter-element">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="nizuc-20.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="
-                      background-image: url('img/nizuc-20/PORTADA (1).jpg');
-                    ">
+                  <div class="grid-item" style="background-image: url('img/nizuc-20/PORTADA (1).jpg')">
                     <div class="title">
-                      <h6>
-                        NIZUC <br />
-                        20 M16
-                      </h6>
+                      <h6>NIZUC <br />20 M16</h6>
                     </div>
                   </div>
                 </a>
               </div>
-                                          <div class="col-6 col-md-6 col-lg-3 filter-element">
+              <div class="col-6 col-sm-4 col-md-3 filter-element">
                 <a href="delta-house.html" class="d-block">
-                  <div
-                    class="grid-item"
-                    style="
-                      background-image: url('img/delta-house/PORTADA.jpg');
-                    ">
+                  <div class="grid-item" style="background-image: url('img/delta-house/PORTADA.jpg')">
                     <div class="title">
-                      <h6>
-                        DELTA<br />
-                        HOUSE
-                      </h6>
+                      <h6>DELTA<br />HOUSE</h6>
                     </div>
                   </div>
                 </a>
@@ -363,6 +299,7 @@
           </div>
         </div>
       </div>
+      
       <section class="container contact">
         <div class="row justify-content-center">
           <div class="col-12 col-md-8">
@@ -450,11 +387,13 @@
                 <li class="nav-item py-2">
                 <a class="nav-link" href="https://www.linkedin.com/company/marciano-de-micheli"><img src="linkedin-icono.png" class=""> Linkedin</a>
               </li>
-              <li class="nav-item py-2">
-                <a class="nav-link"><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
+              <li class="nav-item py-2 ">
+
+                <a href="mailto:info@marcianodemicheli.com" class="nav-link d'flex" ><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link"><img src="img/phone.png" class=""> +54 11 5027 3534</a>
+                
+                <a href="tel:+54 11 5027 3534" class="nav-link" ><img src="img/phone.png" class=""> +54 11 5027 3534</a>
               </li>
             </ul>
           </div>
