--- a/arq-unifamiliar.html
+++ b/arq-unifamiliar.html
@@ -252,7 +252,7 @@
       </div> 
       <div class="col-12 col-md-3">
         <a href="naudir-645.html" class="d-block">
-          <div class="grid-item" style="background-image: url('img/naudir-645/PORTADA.jpg');">
+          <div class="grid-item" style="background-image: url(' img/naudir-645/645 03.jpg');">
             <div class="title">
               <h6>
                 Naudir <br />
@@ -427,11 +427,13 @@
                 <li class="nav-item py-2">
                 <a class="nav-link" href="https://www.linkedin.com/company/marciano-de-micheli"><img src="linkedin-icono.png" class=""> Linkedin</a>
               </li>
-              <li class="nav-item py-2">
-                <a class="nav-link"><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
+              <li class="nav-item py-2 ">
+
+                <a href="mailto:info@marcianodemicheli.com" class="nav-link d'flex" ><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link"><img src="img/phone.png" class=""> +54 11 5027 3534</a>
+                
+                <a href="tel:+54 11 5027 3534" class="nav-link" ><img src="img/phone.png" class=""> +54 11 5027 3534</a>
               </li>
             </ul>
           </div>
