--- a/proyectos-arq.html
+++ b/proyectos-arq.html
@@ -45,13 +45,12 @@
     </nav>
   </header>
 
-  <main class="container-fluid catalog">
+  <main class="container-fluid catalog " >
       <div class="row">
         <div class="col-12 col-md-4 border-bottom">
-          <h4>Proyectos</h4>
         </div>
         <div class="col-12 col-md-8 border-bottom">
-          <ul class="nav nav-underline">
+          <ul class="nav nav-underline d-flex justify-content-end " id="catalogBarAll">
             <li class="nav-item">
               <a class="nav-link" type="button" href="proyectos.html">URBANISMO</a>
             </li>
@@ -64,7 +63,7 @@
           </ul>
         </div>
       </div>
-      <div class="row tab-details ">
+      <div class="row tab-details mt-5">
          <div class="col-12" id="arquitectura-tab">
           <div class="row ">
             <div class="col-12 col-md-6 col-lg-4 ">
@@ -122,11 +121,13 @@
                 <li class="nav-item py-2">
                 <a class="nav-link" href="https://www.linkedin.com/company/marciano-de-micheli"><img src="linkedin-icono.png" class=""> Linkedin</a>
               </li>
-              <li class="nav-item py-2">
-                <a class="nav-link"><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
+              <li class="nav-item py-2 ">
+
+                <a href="mailto:info@marcianodemicheli.com" class="nav-link d'flex" ><img src="img/envelop.png" class=""> info@marcianodemicheli.com</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link"><img src="img/phone.png" class=""> +54 11 5027 3534</a>
+                
+                <a href="tel:+54 11 5027 3534" class="nav-link" ><img src="img/phone.png" class=""> +54 11 5027 3534</a>
               </li>
             </ul>
           </div>
