--- a/proyectos.html
+++ b/proyectos.html
@@ -50,7 +50,7 @@
         <div class="col-12 col-md-4 border-bottom">
         </div>
         <div class="col-12 col-md-8 border-bottom">
-          <ul class="nav nav-underline d-flex justify-content-end " id="catalogBarAll">
+          <ul class="nav nav-underline  " id="catalogBarAll">
             <li class="nav-item">
               <a class="nav-link active" type="button" href="proyectos.html">URBANISMO</a>
             </li>
